--- a/src/Simple.OData.Client.V3.Adapter/Simple.OData.Client.V3.Adapter.csproj
+++ b/src/Simple.OData.Client.V3.Adapter/Simple.OData.Client.V3.Adapter.csproj
@@ -14,7 +14,7 @@
 			Commonly used types:
 			Simple.OData.Client.ODataClient
 		</Description>
-		<PackageTags>$(PackageTags)"odata v3";</PackageTags>
+		<PackageTags>$(PackageTags)'odata v3';</PackageTags>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
