--- a/src/Simple.OData.Client/Simple.OData.Client.csproj
+++ b/src/Simple.OData.Client/Simple.OData.Client.csproj
@@ -14,7 +14,7 @@
 			Commonly used types:
 			Simple.OData.Client.ODataClient
 		</Description>
-		<PackageTags>$(PackageTags)"odata v3";"odata v4"</PackageTags>
+		<PackageTags>$(PackageTags)'odata v3';'odata v4'</PackageTags>
 		<IncludeBuildOutput>false</IncludeBuildOutput>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
