--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -105,7 +105,7 @@
 		</AssemblyAttribute>-->
 	</ItemGroup>
 
-	<ItemGroup Condition=" $(IsTestProject) == 'true' and $(IsSampleProject) != 'true'">
+	<ItemGroup Condition=" $(IsTestProject) == 'true' and $(IsSampleProject) != 'true' and $(IsBenchmarkProject) != 'true'">
 		<PackageReference Include="FluentAssertions" Version="6.*" PrivateAssets="All" />
 		<PackageReference Include="FluentAssertions.Analyzers" Version="0.*" PrivateAssets="All" />
 		<PackageReference Include="MSTest" Version="3.*" />
