--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,8 +6,6 @@ name: CI Build & Release
 on:
   push:
     branches: [ "master" ]
-  # pull_request:
-  #   branches: [ "master" ]
 
 jobs:
   build:
@@ -25,4 +23,4 @@ jobs:
     - name: Build
       run: dotnet build "src/Simple.OData.Client.sln" --no-restore
     - name: Test
-      run: dotnet test "src/Simple.OData.Client.sln" --no-build --verbosity normal
+      run: dotnet test "src/Simple.OData.Client.sln" --no-build --verbosity minimal
