--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
     #   run: dotnet test "src/Simple.OData.Client.sln" --no-build --verbosity minimal
 
     - name: Publish NuGet packages
-      run: dotnet pack src/Simple.OData.Client.sln --no-build --output packages
+      run: dotnet pack src/Simple.OData.Client.sln --no-build --output packages /p:Configuration=debug
 
     - name: Upload packages as artifact
       uses: actions/upload-artifact@v2
