--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -14,13 +14,27 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+  
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.x
-    - name: Restore dependencies
+
+    - name: Restore Dependencies
       run: dotnet restore "src/Simple.OData.Client.sln"
+
     - name: Build
-      run: dotnet build "src/Simple.OData.Client.sln" --no-restore
+      run: dotnet build "src/Simple.OData.Client.sln" --no-restore --configuration Debug --verbosity minimal
+
     - name: Test
-      run: dotnet test "src/Simple.OData.Client.sln" --no-build --verbosity normal
+      run: dotnet test "src/Simple.OData.Client.sln" --no-build --verbosity minimal
+
+    # - name: Create NuGet Packages
+    #   run: dotnet pack src/Simple.OData.Client.sln --no-build --output packages /p:Configuration=debug
+
+    # - name: Upload Artifacts
+    #   uses: actions/upload-artifact@v4
+    #   with:
+    #     name: nuget-packages
+    #     path: packages
+
