--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,12 @@ jobs:
     # - name: Test
     #   run: dotnet test "src/Simple.OData.Client.sln" --no-build --verbosity minimal
 
+    - name: Get Current Time
+      id: build_date
+      run: echo "::set-output name=date::$(date +'%Y%m%d-%H%M%S')"
+
     - name: Create NuGet Packages
-      run: dotnet pack src/Simple.OData.Client.sln --no-build --output packages /p:Configuration=debug
+      run: dotnet pack src/Simple.OData.Client.sln --no-build --output packages /p:Configuration=debug /p:Version="${{ vars.VERSION_MAJORMINOR }}0-CI-${{ steps.build_date.outputs.date }}""
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4
