Attempting to work around https://github.com/dotnet/runtime/issues/96957

--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -28,5 +28,5 @@ jobs:
       run: dotnet build "src/Simple.OData.Client.sln" --no-restore --configuration Debug --verbosity minimal
 
     - name: Test
-      run: dotnet test "src/Simple.OData.Client.sln" --no-build --verbosity minimal
+      run: dotnet test "src/Simple.OData.Client.sln" --no-build --configuration Debug --verbosity minimal
 
