--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
       run: dotnet build "src/Simple.OData.Client.sln" --no-restore --configuration Debug --verbosity minimal
 
     - name: Test
-      run: dotnet test "src/Simple.OData.Client.sln" --no-build --verbosity minimal
+      run: dotnet test "src/Simple.OData.Client.sln" --no-build --configuration Debug --verbosity minimal
 
     - name: Create NuGet Packages
       run: dotnet pack src/Simple.OData.Client.sln --no-build --output packages /p:Configuration=debug /p:Version="${{ vars.CI_VERSION_MAJORMINOR }}-CI-${{ steps.build_date.outputs.date }}"
