--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -112,10 +112,18 @@
 		</AssemblyAttribute>-->
 	</ItemGroup>
 
-	<ItemGroup Condition=" $(IsTestProject) == 'true' and $(IsSampleProject) != 'true' and $(IsBenchmarkProject) != 'true' and $(IsTestAssetProject) != 'true'">
+	<ItemGroup Condition=" $(IsTestProject) == 'true' and $(IsBenchmarkProject) != 'true' and $(IsTestAssetProject) != 'true'">
 		<PackageReference Include="FluentAssertions" Version="6.*" PrivateAssets="All" />
 		<PackageReference Include="FluentAssertions.Analyzers" Version="0.*" PrivateAssets="All" />
 		<PackageReference Include="MSTest" Version="3.*" />
+		<!-- @robertmclaws: Temporary workaround for 8.0 bug: https://github.com/microsoft/vstest/pull/4792 -->
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.*-*" />
+		<PackageReference Include="Microsoft.TestPlatform" Version="17.*-*" />
+
+		<!-- @robertmclaws: We will remove these someday -->
+		<PackageReference Include="xunit" Version="2.*" />
+		<PackageReference Include="xunit.runner.visualstudio" Version="2.*" />
+		<DotNetCliToolReference Include="dotnet-xunit" Version="2.*" />
 	</ItemGroup>
 
 	<ItemGroup>
