--- a/src/Simple.OData.Tests.Samples.ApiV4/Simple.OData.Tests.Samples.ApiV4.csproj
+++ b/src/Simple.OData.Tests.Samples.ApiV4/Simple.OData.Tests.Samples.ApiV4.csproj
@@ -9,11 +9,9 @@
 	</PropertyGroup>
 	
 	<ItemGroup>
-		<PackageReference Include="xunit" Version="2.*" />
-		<PackageReference Include="xunit.runner.visualstudio" Version="2.*" />
-		<DotNetCliToolReference Include="dotnet-xunit" Version="2.*" />
+		<PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="8.*" />
 	</ItemGroup>
-	
+
 	<ItemGroup Condition="'$(TargetFramework)' == 'net48'">
 		<PackageReference Include="Microsoft.Owin.Hosting" Version="4.*" />
 		<PackageReference Include="Microsoft.Owin.Testing" Version="4.*" />
