--- a/.github/workflows/nuget-deploy.yml
+++ b/.github/workflows/nuget-deploy.yml
@@ -1,6 +1,7 @@
 name: Push to NuGet
 
 on:
+  workflow_dispatch:
   workflow_run:
     workflows: ["CI Build & Package", "Release Build & Package"]
     types:
@@ -10,11 +11,12 @@ jobs:
   deployment:
     runs-on: windows-latest
 
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+
     steps:
+
     - name: Download Artifacts
       uses: actions/download-artifact@v4
-      with:
-        name: nuget-packages
 
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
@@ -23,3 +25,11 @@ jobs:
 
     - name: Push to NuGet
       run: dotnet nuget push ./nuget-packages/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+
+  on-failure:
+    runs-on: windows-latest
+
+    if: ${{ github.event.workflow_run.conclusion == 'failure' }}
+
+    steps:
+      - run: echo 'The triggering workflow failed. Publishing NuGet packages not required.'
