GH token secret

--- a/.github/workflows/nuget-deploy.yml
+++ b/.github/workflows/nuget-deploy.yml
@@ -11,14 +11,12 @@ jobs:
   deployment:
     runs-on: windows-latest
 
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
-
     steps:
 
     - name: Download Artifacts
       uses: actions/download-artifact@v4
       with:
-        github-token: ${{ secrets.GH_PAT }}
+        github-token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
@@ -27,11 +25,3 @@ jobs:
 
     - name: Push to NuGet
       run: dotnet nuget push ./nuget-packages/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
-
-  on-failure:
-    runs-on: windows-latest
-
-    if: ${{ github.event.workflow_run.conclusion == 'failure' }}
-
-    steps:
-      - run: echo 'The triggering workflow failed. Publishing NuGet packages not required.'
