--- a/.github/workflows/nuget-deploy.yml
+++ b/.github/workflows/nuget-deploy.yml
@@ -1,27 +1,27 @@
 name: Push to NuGet
 
-on:
-  workflow_dispatch:
-  workflow_run:
-    workflows: ["CI Build & Package", "Release Build & Package"]
-    types:
-      - completed
+# on:
+#   workflow_dispatch:
+#   workflow_run:
+#     workflows: ["CI Build & Package", "Release Build & Package"]
+#     types:
+#       - completed
 
-jobs:
-  deployment:
-    runs-on: windows-latest
+# jobs:
+#   deployment:
+#     runs-on: windows-latest
 
-    steps:
+#     steps:
 
-    - name: Download Artifacts
-      uses: actions/download-artifact@v4
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+#     - name: Download Artifacts
+#       uses: actions/download-artifact@v4
+#       with:
+#         github-token: ${{ github.token }}
 
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: 8.x
+#     - name: Setup .NET
+#       uses: actions/setup-dotnet@v4
+#       with:
+#         dotnet-version: 8.x
 
-    - name: Push to NuGet
-      run: dotnet nuget push ./nuget-packages/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+#     - name: Push to NuGet
+#       run: dotnet nuget push ./nuget-packages/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
