--- a/src/Simple.OData.Client.V3.Adapter/Simple.OData.Client.V3.Adapter.csproj
+++ b/src/Simple.OData.Client.V3.Adapter/Simple.OData.Client.V3.Adapter.csproj
@@ -7,6 +7,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
+		<PackageId>Simple.OData.Client.V3</PackageId>
 		<Summary>Simple.OData.Client helps you interact with OData APIs that comply with any version of the OData standard.</Summary>
 		<Description>
 			$(Summary) This package contains everything you need to connect to OData v1 through v3 APIs.
