--- a/src/Simple.OData.Client.V4.Adapter/Simple.OData.Client.V4.Adapter.csproj
+++ b/src/Simple.OData.Client.V4.Adapter/Simple.OData.Client.V4.Adapter.csproj
@@ -7,7 +7,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<PackageId>Simple.OData.Client.V4</PackageId>
+		<PackageId>Simple.OData.V4.Client</PackageId>
 		<Summary>Simple.OData.Client helps you interact with OData APIs that comply with any version of the OData standard.</Summary>
 		<Description>
 			$(Summary) This package contains everything you need to connect to OData v4 APIs.
