--- a/src/Simple.OData.Tests.Client.Integration/Simple.OData.Tests.Client.Integration.csproj
+++ b/src/Simple.OData.Tests.Client.Integration/Simple.OData.Tests.Client.Integration.csproj
@@ -15,6 +15,10 @@
 	</ItemGroup>
 	
 	<ItemGroup>
+	  <PackageReference Include="Xunit.SkippableFact" Version="1.4.13" />
+	</ItemGroup>
+	
+	<ItemGroup>
 		<ProjectReference Include="..\Simple.OData.Client.V3.Adapter\Simple.OData.Client.V3.Adapter.csproj" />
 		<ProjectReference Include="..\Simple.OData.Client.V4.Adapter\Simple.OData.Client.V4.Adapter.csproj" />
 	</ItemGroup>
