--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,4 +48,4 @@ jobs:
     #     path: packages
 
     - name: Push to NuGet
-      run: dotnet nuget push "**/*.nupkg" --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+      run: dotnet nuget push "**/*.nupkg" --skip-duplicate --no-service-endpoint --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
