Exclude symbols from the metapackage build

--- a/src/Simple.OData.Client/Simple.OData.Client.csproj
+++ b/src/Simple.OData.Client/Simple.OData.Client.csproj
@@ -17,6 +17,7 @@
 		<PackageTags>$(PackageTags)'odata v3';'odata v4'</PackageTags>
 		<IncludeBuildOutput>false</IncludeBuildOutput>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<IncludeSymbols>false</IncludeSymbols>
 	</PropertyGroup>
 
 	<ItemGroup>
