--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,13 +33,13 @@ jobs:
       run: dotnet restore "src/Simple.OData.Client.sln"
 
     - name: Build
-      run: dotnet build "src/Simple.OData.Client.sln" --no-restore --configuration Debug --verbosity minimal
+      run: dotnet build "src/Simple.OData.Client.sln" --no-restore --configuration Debug --verbosity minimal /p:Version="${{ vars.CI_VERSION_MAJORMINOR }}-CI-${{ steps.build_date.outputs.date }}"
 
-    # - name: Test
-    #   run: dotnet test "src/Simple.OData.Client.sln" --no-build --configuration Debug --verbosity minimal
+    - name: Test
+      run: dotnet test "src/Simple.OData.Client.sln" --no-build --configuration Debug --verbosity minimal
 
-    - name: Create NuGet Packages
-      run: dotnet pack src/Simple.OData.Client.sln --no-build --output packages /p:Configuration=debug /p:Version="${{ vars.CI_VERSION_MAJORMINOR }}-CI-${{ steps.build_date.outputs.date }}"
+    # - name: Create NuGet Packages
+    #   run: dotnet pack src/Simple.OData.Client.sln --no-build --output packages /p:Configuration=debug /p:Version="${{ vars.CI_VERSION_MAJORMINOR }}-CI-${{ steps.build_date.outputs.date }}"
 
     # - name: Upload Artifacts
     #   uses: actions/upload-artifact@v4
@@ -48,4 +48,4 @@ jobs:
     #     path: packages
 
     - name: Push to NuGet
-      run: dotnet nuget push "**/packages/*.nupkg" --skip-duplicate --no-service-endpoint -s "https://api.nuget.org/v3/index.json" -k ${{ secrets.NUGET_API_KEY }}
+      run: dotnet nuget push "**/*.nupkg" --skip-duplicate --no-service-endpoint -s "https://api.nuget.org/v3/index.json" -k ${{ secrets.NUGET_API_KEY }}
