--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,11 +38,14 @@ jobs:
     - name: Test
       run: dotnet test "src/Simple.OData.Client.sln" --no-build --configuration Release --verbosity minimal
 
-    - name: Create NuGet Packages
-      run: dotnet pack src/Simple.OData.Client.sln --no-build --output packages /p:Configuration=release /p:Version="${{ vars.RELEASE_VERSION_MAJORMINOR }}"
+    # - name: Create NuGet Packages
+    #   run: dotnet pack src/Simple.OData.Client.sln --no-build --output packages /p:Configuration=release /p:Version="${{ vars.RELEASE_VERSION_MAJORMINOR }}"
 
-    - name: Upload Artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: nuget-packages
-        path: packages
+    # - name: Upload Artifacts
+    #   uses: actions/upload-artifact@v4
+    #   with:
+    #     name: nuget-packages
+    #     path: packages
+
+    - name: Push to NuGet
+      run: dotnet nuget push "**/*.nupkg" --skip-duplicate --no-service-endpoint -s "https://api.nuget.org/v3/index.json" -k ${{ secrets.NUGET_API_KEY }}
