Fixing package tags

--- a/src/Simple.OData.Client.V3.Adapter/Simple.OData.Client.V3.Adapter.csproj
+++ b/src/Simple.OData.Client.V3.Adapter/Simple.OData.Client.V3.Adapter.csproj
@@ -15,7 +15,7 @@
 			Commonly used types:
 			Simple.OData.Client.ODataClient
 		</Description>
-		<PackageTags>$(PackageTags)'odata v3';</PackageTags>
+		<PackageTags>$(PackageTags);v3;</PackageTags>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
